# FinalProject-NumericalOptimizationInRobotics

./: .gitignore  README.md
data/: problem.ptf  problem.sol
src/TOPP/: CMakeLists.txt  package.xml
src/TOPP/config/: global_planning.rviz  global_planning.yaml
src/TOPP/include/TOPP/: firi.hpp  geo_utils.hpp  global_planner.hpp  map_gen.hpp  sdqp.hpp  trajectory.hpp  visualizer.hpp
src/TOPP/launch/: global_planning.launch  poly_map_gen.launch
src/TOPP/src/: TOPP_node.cpp  global_planner.cpp  map_gen.cpp  map_gen_node.cpp
